# src/users/users.controller.ts
@@ -1,0 +1,41 @@
+import {
+  Controller,
+  Get,
+  NotFoundException,
+  Param,
+  ParseIntPipe,
+  UseGuards,
+} from '@nestjs/common';
+import { AuthGuard } from '@nestjs/passport';
+import { ApiBearerAuth, ApiOperation, ApiResponse } from '@nestjs/swagger';
+import { plainToInstance } from 'class-transformer';
+
+import { ProfileResponseDto } from '@otus-social/auth/dto';
+import { UsersService } from '@otus-social/users/users.service';
+
+@Controller('users')
+export class UsersController {
+  constructor(private readonly usersService: UsersService) {}
+
+  @ApiOperation({ summary: 'Get user profile' })
+  @ApiResponse({
+    status: 200,
+    description: 'User profile',
+    type: ProfileResponseDto,
+  })
+  @ApiResponse({ status: 401, description: 'Unauthorized' })
+  @ApiBearerAuth()
+  @UseGuards(AuthGuard('jwt'))
+  @Get(':userId')
+  public async getProfile(
+    @Param('userId', ParseIntPipe) userId: number,
+  ): Promise<ProfileResponseDto | null> {
+    const profile = await this.usersService.getProfile(userId);
+
+    if (!profile) {
+      throw new NotFoundException('Profile not found');
+    }
+
+    return plainToInstance(ProfileResponseDto, profile);
+  }
+}
